Fixes scroll lock layout shift (#1895)
* fix scroll lock layout shift

* changelog entry

* changelog entry

* prettier

* add notes about browser support

--- a/src/themes/_utility.css
+++ b/src/themes/_utility.css
@@ -11,8 +11,9 @@
   }
 }
 
+/** This can go away once Safari has scrollbar-gutter support. */
 @supports not (scrollbar-gutter: stable) {
-  .sl-scroll-lock {
+  .sl-scroll-lock body {
     padding-right: var(--sl-scroll-lock-size) !important;
     overflow: hidden !important;
   }
